buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
        //jcenter()
    }

    dependencies {
        classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0'
        classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
        //classpath 'com.github.jengelman.gradle.plugins:shadow:6.1.0'
    }
}

apply plugin: 'application'
apply plugin: 'java'
apply plugin: 'java-library'
//apply plugin: 'maven'
apply plugin: 'maven-publish'
apply plugin: 'com.github.johnrengelman.shadow'

group 'com.scienceminer.glutton'
version '0.3-SNAPSHOT'

sourceCompatibility = 1.8

// The main class of the application
mainClassName = 'com.scienceminer.glutton.web.LookupServiceApplication'
tasks.run.workingDir = rootProject.rootDir

repositories {
    mavenLocal()
    mavenCentral()
}

sourceSets.main.resources {
    srcDirs = ["src/main/resources"];
}

processResources {
    filesMatching('../config/glutton.yml') {
        filter {
            it.replace('project.version', project.property('version_placeholder'))
        }
    }
}

task install(dependsOn: installShadowDist)

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation "org.hamcrest:hamcrest-all:1.3"
    testImplementation "org.easymock:easymock:3.5"

    implementation "com.google.code.gson:gson:2.8.1"

    implementation "io.dropwizard:dropwizard-core:1.3.29"
    implementation "io.dropwizard:dropwizard-assets:1.3.29"
    implementation "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.2"
    implementation "io.dropwizard:dropwizard-testing:1.3.29"
    implementation "io.dropwizard:dropwizard-forms:1.3.29"
    implementation "io.dropwizard:dropwizard-client:1.3.29"
    implementation "io.dropwizard:dropwizard-auth:1.3.29"
    implementation "io.dropwizard.metrics:metrics-core:4.0.5"
    implementation "io.dropwizard.metrics:metrics-servlets:4.0.5"
    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.16.0'

    implementation "com.rockymadden.stringmetric:stringmetric-core_2.10:0.27.3"

    //Parsing XML/Json
    implementation group: 'org.codehaus.woodstox', name: 'stax2-api', version: '4.0.0'
    implementation group: 'org.codehaus.woodstox', name: 'woodstox-core-asl', version: '4.4.1'

    implementation 'org.lmdbjava:lmdbjava:0.8.1'
    implementation 'de.ruedigermoeller:fst:2.56'
    implementation 'org.xerial.snappy:snappy-java:1.1.7.2'

    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.14.1'

//    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
    implementation 'org.apache.commons:commons-collections4:4.1'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'commons-io:commons-io:2.6'
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.20'

    implementation group: 'org.tukaani', name: 'xz', version: '1.8'

    implementation "com.fasterxml.jackson.core:jackson-core:2.9.10"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.9.10"
    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.9.10"

    implementation group: 'com.opencsv', name: 'opencsv', version: '5.0'
}

distributions {
    shadow {
        /*contents {
            from(new File(rootProject.rootDir, "data/config")) {
                into "data/config"
            }
        }*/
    }
}

shadowJar {
//    archiveClassifier = 'onejar'
    classifier = 'onejar'
    mergeServiceFiles()
    zip64 true
    manifest {
        attributes 'Main-Class': mainClassName
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

distTar.enabled = false
distZip.enabled = false
shadowDistTar.enabled = false

artifacts {
    archives shadowJar
//    archives shadowDistZip
//    archives shadowDistTar
}